<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#D7D8DA"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsNeighbour">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:context=".ui.neighbour_details.DetailsNeighbourActivity">

        <ImageView
            android:id="@+id/detailsAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="NeighbourAvatar"
            android:minHeight="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/backArrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:tint="@android:color/white"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/personNameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="174dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/detailsAvatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="320dp"
            android:src="@drawable/favorite_button_selector"
            android:backgroundTint="#F5F5F5"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/detailsAvatar"
            app:layout_constraintEnd_toEndOf="@+id/detailsCardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsAvatar" />

        <android.support.v7.widget.CardView
            android:id="@+id/detailsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toTopOf="@+id/aboutMeCardView"
            app:layout_constraintEnd_toEndOf="@+id/aboutMeCardView"
            app:layout_constraintStart_toStartOf="@+id/aboutMeCardView"
            app:layout_constraintTop_toBottomOf="@+id/detailsAvatar">

            <TextView
            android:id="@+id/PersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp" />

            <TextView
            android:id="@+id/postalAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:drawableStart="@drawable/ic_baseline_location_on_24"
                android:drawablePadding="5dp"
                android:drawableTint="#FC7CAB" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="100dp"
                android:drawableStart="@drawable/ic_baseline_call_24"
                android:drawablePadding="5dp"
                android:drawableTint="#FC7CAB" />

            <TextView
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="150dp"
                android:drawableStart="@drawable/ic_baseline_language_24"
                android:drawablePadding="5dp"
                android:paddingBottom="5dp"
                android:drawableTint="#FC7CAB" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/aboutMeCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailsCardView"
            android:layout_margin="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsCardView">

            <TextView
                android:id="@+id/aboutMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="A propos de moi"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/aboutMeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="15dp" />

        </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
</ScrollView>